--- a/index.html
+++ b/index.html
@@ -185,36 +185,36 @@
         <h2 class="team__title">Frontend Team</h2>
         <div class="cards max-width">
           <div class="profile-card">
-            <img src="./img/danilo.jpg" alt="Foto de Ana Pérez" class="profile-img" />
+            <img src="./img/danilo.jpeg" alt="Foto de Danilo Olivos" class="profile-img" />
 
             <h2 class="profile-name">Danilo Olivos</h2>
             <p class="profile-role">Scrum Master</p>
           </div>
           <div class="profile-card">
-            <img src="./img/danilo.jpg" alt="Foto de Ana Pérez" class="profile-img" />
+            <img src="./img/juan.jpeg" alt="Foto de Juan Camilo" class="profile-img" />
 
             <h2 class="profile-name">Juan Camilo</h2>
             <p class="profile-role">Developer</p>
           </div>
 
           <div class="profile-card">
-            <img src="./img/danilo.jpg" alt="Foto de Ana Pérez" class="profile-img" />
+            <img src="./img/luis.jpeg" alt="Foto de Luis Diaz" class="profile-img" />
 
             <h2 class="profile-name">Luis Diaz</h2>
             <p class="profile-role">Developer</p>
           </div>
 
           <div class="profile-card">
-            <img src="./img/danilo.jpg" alt="Foto de Ana Pérez" class="profile-img" />
+            <img src="./img/brayan.jpeg" alt="Foto de Brayan" class="profile-img" />
 
-            <h2 class="profile-name">Brayan</h2>
+            <h2 class="profile-name">Brayan de Jesús</h2>
             <p class="profile-role">Developer</p>
           </div>
 
           <div class="profile-card">
-            <img src="./img/danilo.jpg" alt="Foto de Ana Pérez" class="profile-img" />
+            <img src="./img/keiner.jpeg" alt="Foto de Keiner" class="profile-img" />
 
-            <h2 class="profile-name">Keiner</h2>
+            <h2 class="profile-name">Keiner Gustavo</h2>
             <p class="profile-role">Developer</p>
           </div>
         </div>
