add jacob image

--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@
             <h2 class="profile-name">Keiner Gustavo</h2>
             <p class="profile-role">Developer</p>
           </div>
+
+          <div class="profile-card">
+            <img src="./img/jacob.jpeg" alt="Foto de Jacob Diaz" class="profile-img" />
+
+            <h2 class="profile-name">Jacob Diaz</h2>
+            <p class="profile-role">Backend Developer</p>
+          </div>
         </div>
       </section>
     </main>
